<resources>
    <string name="app_name">Group Finder</string>
    <string name="group_name">Group Name</string>
    <string name="member_count">Member Count</string>
    <string name="group_id">Group Id</string>
    <string name="group_city">Group City</string>
    <string name="group_description">Group Description</string>
    <string name="search_guide">Search for groups by pressing the magnifying glass on the toolbar</string>
    <string name="location_permission_denied">We may not be able to provide you with the best results!</string>
    <string name="view_in_web">View In Web</string>
    <string name="no_results_found">No results found</string>

</resources>
