<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">


    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/groupPhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:src="@drawable/loader"/>


    <TextView
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="24sp"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"

        android:scrollHorizontally="true"
        android:maxLines="2"

        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorText"
        android:text="@string/group_name" />

    <TextView
        android:id="@+id/groupMemberCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="14sp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        android:ellipsize="end"
        android:maxLines="1"

        android:textColor="@color/colorText"

        android:text="@string/member_count" />

    <TextView
        android:id="@+id/groupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="14sp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        android:ellipsize="end"
        android:maxLines="1"

        android:textColor="@color/colorText"

        android:text="@string/group_id" />

    <TextView
        android:id="@+id/groupLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="14sp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        android:ellipsize="end"
        android:maxLines="1"

        android:textColor="@color/colorText"

        android:text="@string/group_city" />

    <TextView
        android:id="@+id/groupDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="14sp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        android:scrollbars="vertical"

        android:textColor="@color/colorText"

        android:text="@string/group_description" />

</LinearLayout>
