<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/groupPhoto"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@drawable/loader"/>


        <TextView
            android:id="@+id/groupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"
            android:scrollHorizontally="true"
            android:text="@string/group_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/groupMemberCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/member_count"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/groupId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/group_id"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/groupLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/group_city"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp"/>

        <View style="@style/Divider"/>

        <Button
            android:id="@+id/groupWebButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_design"
            android:elevation="0dp"
            android:padding="8dp"
            android:text="@string/view_in_web"
            android:textColor="@color/colorSecondaryText"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/groupDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/group_description"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp"/>

    </LinearLayout>
</ScrollView>
